--- a/ClientProductApp/index.html
+++ b/ClientProductApp/index.html
@@ -71,6 +71,22 @@
       </div>
       <div class = "container" id = "app-div">
         <div id= "table-div"></div>
+        <div class="container" id="filter-by-price-div">
+          <div class="input-group mb-3">
+            <input id="price-filter-input" type="text" class="form-control" placeholder="Max product price" aria-label="Max product price" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button id="price-filter-button" class="btn btn-outline-secondary" type="button" >Search</button>
+            </div>
+          </div>
+        </div>
+        <div class="container" id="filter-by-select-div">
+          <div class="form-group">
+            <label for="select-filter">Select:</label>
+            <select class="form-control" id="select-filter-select" name="select-filter">
+            </select>
+            <button id="select-filter-button" class="btn btn-outline-secondary" type="button" >Search</button>
+          </div>
+        </div>
         <div class="container" id="add-element-div">
             <h1 class="mt-4">Add element</h1>
             <form id="add-element-form">
